--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,7 @@ services:
       target: final
     ports:
       - 1559:1559
+    restart: always
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
