--- a/crates/uniswapx-rs/Cargo.toml
+++ b/crates/uniswapx-rs/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-alloy-primitives = "0.8.20"
-alloy-sol-types = "0.8.20"
-alloy-dyn-abi = "0.8.20"
-anyhow = "1.0.70"
+alloy = { version = "0.13.0", features = ["sol-types", "serde", "full"] }
+# alloy-primitives = "0.8.20"
+# alloy-sol-types = "0.8.20"
+# alloy-dyn-abi = "0.8.20"
+anyhow = "1.0.98"
 hex = "0.4.3"
-serde = "1.0.168"
+serde = "1.0.219"
